syntax = "proto3";

package feedback_fusion_v1;

import "common/resource.proto";
import "google/protobuf/timestamp.proto";

enum ProtoAuthorizationGrant {
  WRITE = 0;
  READ = 1;
  List = 2;
  All = 3;
}

enum ProtoAuthorizationType {
  TYPE_SCOPE = 0;
  TYPE_GROUP = 1;
  TYPE_SUBJECT = 2;
}

message ProtoResourceAuthorizationData {
  ProtoAuthorizationType type = 1;
  repeated ProtoAuthorizationGrant grant = 2;
  repeated string values = 3;
}

message CreateResourceAuthorizationRequest {
  common.ProtoResourceKind resource_kind = 2;
  repeated string resource_id = 3;
  ProtoResourceAuthorizationData authorization_data = 4;
}

message GetResourceAuthorizationsRequest {
  int32 page_token = 1;
  int32 page_size = 2;
  optional string value = 3;
  optional ProtoAuthorizationType authorization_type = 4;
}

message ProtoResourceAuthorization {
  string id = 1;
  common.ProtoResourceKind resource_kind = 2;
  optional string resource_id = 3;
  ProtoAuthorizationType authorization_type = 4;
  ProtoAuthorizationGrant authorization_grant = 5;
  string value = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp created_at = 8;
}

message ResourceAuthorizationList {
  repeated ProtoResourceAuthorization authorizations = 1;
}

message ResourceAuthorizationPage {
  int32 page_token = 1;
  int32 next_page_token = 2;
  int32 page_size = 3;
  int32 total = 4;

  repeated ProtoResourceAuthorization authorizations = 5;
}

message UpdateResourceAuthorizationRequest {
  string id = 1;
  optional string resource_id = 2;
  optional ProtoAuthorizationType authorization_type = 3;
  optional ProtoAuthorizationGrant authorization_grant = 4;
  optional string value = 5;
}

message GetResourceAuthorizationRequest {
  string id = 1;
}

message DeleteResourceAuthorizationRequest {
  string id = 1;
}

message ExportResourceAuthorizationsRequest {
  repeated string ids = 1;
}

message ResourceAuthorizationExportResponse {
  string export = 1;
}
